Rollback: Restore Vercel configuration and remove Zeabur scripts

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/dist/">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>一起装 - 智能交付系统</title>
 </head>
 
 <body>
-    <p>正在跳转...</p>
-    <script>window.location.href = '/dist/';</script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
